fixed some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ nav img{
     line-height: 48px;
     font-size: 18px;
     margin-bottom: 45px;
+    margin-top: 30px;
 }
 button{
     background-color: magenta;
